Fix spacing and add class to MC many also

--- a/src/app/exams/exams-view.scss
+++ b/src/app/exams/exams-view.scss
@@ -22,9 +22,7 @@
     margin-bottom: 8px;
   }
 
-  .mat-radio-label-text {
+  .multiple-choice-text {
     white-space: normal;
-    padding: 5px;
-    display: block;
   }
 }
